[package]
name = "syntax-tree"
version = "0.1.0"
edition = "2021"

description = "A doubly-linked syntax tree."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/syntax-tree"
documentation = "https://docs.rs/syntax-tree/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]