[package]
name = "linked-syntax-tree"
version = "0.1.11"
edition = "2021"

description = "A doubly-linked syntax tree."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/linked-syntax-tree"
documentation = "https://docs.rs/linked-syntax-tree/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]